# cat-server

./: Cargo.toml  README.md
html/: index.html
src/: lib.rs  main.rs
src/foundation/: middleware.rs  mod.rs  server_error.rs  server_object.rs
src/route/: cat.rs
