[package]
name = "cat_server"
version = "0.1.0"
authors = ["kenta-ja8 <jackyutajack@gmail.com>"]
edition = "2018"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
actix-rt = "1.1"
log = "0.4"
env_logger = "0.8.2"
actix-service = "1.0.6"
actix-session = "0.4.0"
actix-web-validator = "2.0.3"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
erased-serde = "0.3.12"
validator = "0.12"
derive_more = "0.99.11"
lazy_static = "1.4.0"
actix-http = "2.2.0"
